refactor: toList method using