@@ -3,7 +3,6 @@ package com.gmoon.springjpaspecs.books.bookstore.domain;
 import static org.assertj.core.api.Assertions.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.DisplayName;
@@ -11,8 +10,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.springframework.beans.factory.annotation.Autowired;
-
-import com.querydsl.core.types.Order;
 
 import com.gmoon.springjpaspecs.books.bookstore.domain.vo.BookQuantity;
 import com.gmoon.springjpaspecs.books.bookstore.domain.vo.BookStatus;
@@ -22,6 +19,7 @@ import com.gmoon.springjpaspecs.global.domain.SupportDataJpaTest;
 import com.gmoon.springjpaspecs.global.specs.conditional.Specification;
 import com.gmoon.springjpaspecs.global.specs.conditional.Specs;
 import com.gmoon.springjpaspecs.global.specs.orderby.OrderSpecification;
+import com.querydsl.core.types.Order;
 
 import jakarta.persistence.EntityNotFoundException;
 
@@ -79,7 +77,7 @@ class JpaBookStoreRepositoryTest extends SupportDataJpaTest {
 		List<BookStoreBook> actual = all.stream()
 			 .flatMap(bookStore -> bookStore.getStoredBooks().stream())
 			 .filter(isDisPlayed::isSatisfiedBy)
-			 .collect(Collectors.toList());
+			 .toList();
 
 		assertThat(actual)
 			 .map(BookStoreBook::getStatus)
